--- a/abcd/package.json
+++ b/abcd/package.json
@@ -18,13 +18,7 @@
     "abcd.d.ts",
     "src/**/*.vue"
   ],
-  "dependencies": {
-    "@mdi/font": "^3.6.95",
-    "roboto-fontface": "*",
-    "vue-class-component": "^7.2.6",
-    "vue-property-decorator": "^9.1.2",
-    "vuetify": "^2.4.2"
-  },
+  "dependencies": {},
   "devDependencies": {
     "@babel/core": "^7.9.0",
     "@babel/plugin-proposal-class-properties": "^7.12.1",
@@ -49,10 +43,20 @@
     "vue": "^2.6.11",
     "vue-cli-plugin-vuetify": "~2.0.9",
     "vue-template-compiler": "^2.6.11",
-    "vuetify-loader": "^1.6.0"
+    "vuetify-loader": "^1.6.0",
+    "vuetify": "^2.4.2",
+    "@mdi/font": "^3.6.95",
+    "roboto-fontface": "*",
+    "vue-class-component": "^7.2.6",
+    "vue-property-decorator": "^9.1.2"
   },
   "peerDependencies": {
-    "vue": "^2.6.11"
+    "vue": "^2.6.11",
+    "vuetify": "^2.4.2",
+    "@mdi/font": "^3.6.95",
+    "roboto-fontface": "*",
+    "vue-class-component": "^7.2.6",
+    "vue-property-decorator": "^9.1.2"
   },
   "engines": {
     "node": ">=10"
