--- a/abcd/package.json
+++ b/abcd/package.json
@@ -25,30 +25,30 @@
     "@babel/plugin-proposal-decorators": "^7.12.12",
     "@babel/preset-env": "^7.9.5",
     "@babel/preset-typescript": "^7.9.0",
-    "@rollup/plugin-alias": "^2.2.0",
+    "@mdi/font": "^3.6.95",
+    "@rollup/plugin-alias": "^3.1.1",
+    "@rollup/plugin-babel": "^5.2.2",
     "@rollup/plugin-commonjs": "^11.1.0",
+    "@rollup/plugin-node-resolve": "^11.0.1",
     "@rollup/plugin-replace": "^2.3.2",
     "@vue/cli-plugin-babel": "^4.3.1",
     "@vue/cli-plugin-typescript": "^4.3.1",
     "@vue/cli-service": "^4.3.1",
     "cross-env": "^7.0.2",
     "minimist": "^1.2.5",
+    "roboto-fontface": "*",
     "rollup": "^2.7.3",
-    "rollup-plugin-babel": "^4.4.0",
-    "rollup-plugin-terser": "^5.3.0",
     "rollup-plugin-vue": "^5.1.6",
     "sass": "^1.19.0",
     "sass-loader": "^8.0.0",
     "typescript": "^3.8.3",
     "vue": "^2.6.11",
-    "vue-cli-plugin-vuetify": "~2.0.9",
-    "vue-template-compiler": "^2.6.11",
-    "vuetify-loader": "^1.6.0",
-    "vuetify": "^2.4.2",
-    "@mdi/font": "^3.6.95",
-    "roboto-fontface": "*",
     "vue-class-component": "^7.2.6",
-    "vue-property-decorator": "^9.1.2"
+    "vue-cli-plugin-vuetify": "~2.0.9",
+    "vue-property-decorator": "^9.1.2",
+    "vue-template-compiler": "^2.6.11",
+    "vuetify": "^2.4.2",
+    "vuetify-loader": "^1.6.0"
   },
   "peerDependencies": {
     "vue": "^2.6.11",
