--- a/abcd/package.json
+++ b/abcd/package.json
@@ -4,25 +4,22 @@
   "description": "",
   "scripts": {
     "serve": "vue-cli-service serve dev/serve.ts",
-    "build": "cross-env NODE_ENV=production rollup --config build/rollup.config.js",
-    "build:es": "cross-env NODE_ENV=production rollup --config build/rollup.config.js --format es",
-    "build:ssr": "cross-env NODE_ENV=production rollup --config build/rollup.config.js --format cjs",
-    "build:unpkg": "cross-env NODE_ENV=production rollup --config build/rollup.config.js --format iife"
+    "build": "rollup --config build/rollup.config.js"
   },
-  "main": "dist/abcd.ssr.js",
   "module": "dist/abcd.esm.js",
-  "browser": "dist/abcd.esm.js",
-  "unpkg": "dist/abcd.min.js",
   "files": [
     "dist/*",
     "abcd.d.ts",
     "src/**/*.vue"
   ],
-  "dependencies": {},
+  "dependencies": {
+    "@babel/runtime": "^7.12.5"
+  },
   "devDependencies": {
     "@babel/core": "^7.9.0",
     "@babel/plugin-proposal-class-properties": "^7.12.1",
     "@babel/plugin-proposal-decorators": "^7.12.12",
+    "@babel/plugin-transform-runtime": "^7.12.10",
     "@babel/preset-env": "^7.9.5",
     "@babel/preset-typescript": "^7.9.0",
     "@mdi/font": "^3.6.95",
@@ -31,14 +28,15 @@
     "@rollup/plugin-commonjs": "^11.1.0",
     "@rollup/plugin-node-resolve": "^11.0.1",
     "@rollup/plugin-replace": "^2.3.2",
+    "@rollup/plugin-typescript": "3.1.0",
     "@vue/cli-plugin-babel": "^4.3.1",
     "@vue/cli-plugin-typescript": "^4.3.1",
     "@vue/cli-service": "^4.3.1",
-    "cross-env": "^7.0.2",
-    "minimist": "^1.2.5",
     "roboto-fontface": "*",
     "rollup": "^2.7.3",
+    "rollup-plugin-typescript2": "^0.29.0",
     "rollup-plugin-vue": "^5.1.6",
+    "rollup-plugin-vuetify": "^0.2.4",
     "sass": "^1.19.0",
     "sass-loader": "^8.0.0",
     "typescript": "^3.8.3",
